--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "aws-sdk": "^2.1006.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "browser-image-resizer": "^2.2.0",
     "cookie-session": "^2.0.0-rc.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -21,7 +23,8 @@
     "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "sharp": "^0.29.1"
   },
   "scripts": {
     "start": "node server/server.js",
