--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@date-io/dayjs": "^1.3.13",
+    "@date-io/moment": "^1.3.13",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@react-google-maps/api": "^2.5.0",
