--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "server": "nodemon --watch server server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "apidoc": "apidoc -i server/routes/ -o apidoc/",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
