Added outline for GET request documentation.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,11 @@
     "apidoc": "apidoc -i server/routes/ -o apidoc/",
     "eject": "react-scripts eject"
   },
+  "apidoc": {
+    "title": "ShroomLogger Application",
+    "version": "1",
+    "description": "API documentation for solo project ShroomLogger"
+  },
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
