--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@date-io/moment": "^1.3.13",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@googlemaps/js-api-loader": "^1.12.12",
+    "@googlemaps/react-wrapper": "^1.1.18",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
