--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "prime-solo-project",
+  "name": "ShroomLogger",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@date-io/dayjs": "^1.3.13",
     "@date-io/moment": "^1.3.13",
@@ -12,7 +15,7 @@
     "@googlemaps/react-wrapper": "^1.1.18",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.0.4",
-    "@mui/material": "^5.0.4",
+    "@mui/material": "^5.2.6",
     "@react-google-maps/api": "^2.5.0",
     "aws-sdk": "^2.1006.0",
     "axios": "^0.21.1",
