--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "browser-image-resizer": "^2.2.0",
+    "classnames": "^2.3.1",
     "cookie-session": "^2.0.0-rc.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -35,7 +36,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-s3": "^1.3.1",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "5.0.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
